<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one_text">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <string name="How_toPlay">How to play :</string>
    <string name="info_text">Touch the buttons and screen</string>
</resources>